<resources>
    <string name="app_name">Text Based Adventure Game</string>
    <string name="mobile_site_16">Mobile Site 16</string>
    <string name="tap_to_continue_home_screen">Tap to Continue</string>
    <string name="title_activity_game_load_page">GameLoadPage</string>
    <string name="first_name">First Name</string>
    <string name="user_input_name">Name</string>
    <string name="next">Next</string>
    <string name="last_name">Last Name</string>
    <string name="cell_intro_description">Description of Cell here</string>
    <string name="examine_sink">Examine sink</string>
    <string name="examine_bed">Examine bed</string>
    <string name="examine_d_51314">Examine D-51314</string>
    <string name="examine_glass_wall">Examine glass wall</string>
    <string name="examine_toilet">Examine toilet</string>
    <string name="examine_sink_mirror">Examine sink mirror</string>
    <string name="turn_on_faucet">turn on faucet</string>
    <string name="take_pipe">take pipe</string>
    <string name="return_to_cell">Return to cell</string>
    <string name="cell_description">This is the cell where you\'ve spent your last few weeks. One wall is entirely made of some type of clear material that neither you nor your cell mate have had much luck breaking. There is some blood on it now, probably made by your cellmate who is lying unmoving in front of the wall. On the other wall, in one corner there is the bunk bed where you and your cellmate sleep while the cell\'s toilet and sink are in the other corner.</string>
    <string name="cell_sink_description">The cell\'s sink is made of the same shiny metal as the toilet. Above the sink is a mirror set in the wall. Underneath the sink is a pipe that runs directly into the wall. Examining the pipe more closely, you notice that some of the bolts holding one of the sections on look loose.</string>
    <string name="cell_body_description">Your cellmate lies on the ground in front of the clear wall of your cell. They are lying unmoving, with dried blood all over their face from a wound in their forehead. They are wearing their standard Foundation issue D-Class uniform.</string>
    <string name="cell_wall_description">One side of your cell is made up of a completely clear wall. You\'re not sure what material it\'s made out of, but no one you know has been able to damage it. You can faintly make out where the door is, but that can only be opened from the outside.</string>
    <string name="prison_description">This floor of the ship seems to consist almost entirely of prison cells for D-Class personnel. In the center of the cells are a medbay and a set of showers. On each end of the floor is a security checkpoint.</string>
    <string name="prison_medbay_description">The medbay is completely deserted. On one wall is a counter with papers thrown on the top of it. On another wall is a desk. Near the entryway is a coat rack with a lab coat hanging on it. In the center of the room is a chair for patients to sit on with a small tray of medical instruments next to it.</string>
    <string name="prison_checkpoint_description">On each side of the prison is a checkpoint. The checkpoint has a clear door made out of the same material as the clear walls of the cell. There is a small room on the other side of the door. There are also staircases leading upwards and downwards.</string>
    <string name="foundation_employee_living_quarters_description">The floor looks lived in. There is a lounge and severla open doors that look like they lead to bedrooms. At the far end of the quarters is a closed door with the word Armory painted on it.</string>
    <string name="foundation_employee_living_quarters_dr1_room_description">This room is neatly put together. The bed is made and clothes are neatly put into the closet. There is a desk with soem papers neatly stacked on it. The chair stands out, as it is pushed out from the desk and not pushed in. A strange poster is on the wall, and a small bathroom connects to the bedroom.</string>
</resources>
