<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerCell">

    <RadioGroup
        android:id="@+id/intro_cell_option_group"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="72dp">

        <RadioButton
            android:id="@+id/examine_cell_toilet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine_toilet" />

        <RadioButton
            android:id="@+id/examine_cell_wall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine_glass_wall" />

        <RadioButton
            android:id="@+id/examine_cell_sink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine_sink" />

        <RadioButton
            android:id="@+id/examine_cell_bed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine_bed" />

        <RadioButton
            android:id="@+id/examine_roommate_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine_d_51314" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="334dp"
        android:layout_height="339dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="363dp"
        android:autoSizeTextType="uniform"
        android:text="@string/cell_description"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/intro_cell_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="15dp"
        android:onClick="onNextCellButtonClick"
        android:text="Next" />

    <TextView
        android:id="@+id/additional_cell_text"
        android:layout_width="350dp"
        android:layout_height="112dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="241dp"
        android:autoSizeTextType="uniform" />

</RelativeLayout>