<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CellSink">

    <RadioGroup
        android:id="@+id/intro_cell_sink_option_group"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="110dp">

        <RadioButton
            android:id="@+id/examine_sink_mirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine_sink_mirror" />

        <RadioButton
            android:id="@+id/turn_on_faucet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_faucet" />

        <RadioButton
            android:id="@+id/take_pipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_pipe" />

        <RadioButton
            android:id="@+id/return_to_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_cell" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="344dp"
        android:layout_height="315dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="387dp"
        android:text="@string/cell_sink_description"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/intro_cell_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:layout_marginBottom="29dp"
        android:onClick="onNextCellButtonClick"
        android:text="Next" />

    <TextView
        android:id="@+id/additional_cell_sink_text"
        android:layout_width="343dp"
        android:layout_height="116dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="253dp" />

</RelativeLayout>