<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptainsComputer">

    <RadioGroup
        android:id="@+id/captains_computer_options_group"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="213dp">

        <RadioButton
            android:id="@+id/aid_foundaion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examine_sink_mirror" />

        <RadioButton
            android:id="@+id/aid_church_of_the_broken_god"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_faucet" />

        <RadioButton
            android:id="@+id/leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_pipe" />

        <RadioButton
            android:id="@+id/return_to_captains_quarters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_cell" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="347dp"
        android:layout_height="202dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="500dp"
        android:text="Information about the two sides at play."
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/intro_cell_next_button"
        android:onClick="onNextCaptainsComputerButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="154dp"
        android:layout_marginRight="154dp"
        android:layout_marginBottom="149dp"
        android:text="Next" />

    <TextView
        android:id="@+id/additional_captains_computer_text"
        android:layout_width="349dp"
        android:layout_height="91dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="390dp" />

</RelativeLayout>